force-app/main/default/objects/SPA_Form__c/SPA_Form__c.object-meta.xml
<CustomObject>
    <label>SPA Form</label>
    <nameField>
        <displayFormat>SPA-{0000000}</displayFormat>
        <label>SPA Form</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SPA Forms</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>