force-app/main/default/objects/SPA_Form__c/fields/Additional_Inventory_Purchases__c.field-meta.xml
<CustomField>
    <fullName>Additional_Inventory_Purchases__c</fullName>
    <label>Additional Inventory Purchases</label>
    <length>255</length>
    <type>Text</type>
</CustomField>