force-app/main/default/objects/SPA_Form__c/fields/Anticipated_Rebate_Subsidy_per_Unit__c.field-meta.xml
<CustomField>
    <fullName>Anticipated_Rebate_Subsidy_per_Unit__c</fullName>
    <label>Anticipated Rebate/Subsidy per Unit</label>
    <length>255</length>
    <type>Text</type>
</CustomField>