force-app/main/default/objects/SPA_Form__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <formula>TEXT(Opportunity__r.Application__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application</label>
    <type>Text</type>
</CustomField>