force-app/main/default/objects/SPA_Form__c/fields/Application_Details__c.field-meta.xml
<CustomField>
    <fullName>Application_Details__c</fullName>
    <formula>TEXT(Opportunity__r.Application_Details__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application Details</label>
    <type>Text</type>
</CustomField>