force-app/main/default/objects/SPA_Form__c/fields/Competitor_Intel__c.field-meta.xml
<CustomField>
    <fullName>Competitor_Intel__c</fullName>
    <label>Competitor Intel</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>