force-app/main/default/objects/SPA_Form__c/fields/Construction_Status__c.field-meta.xml
<CustomField>
    <fullName>Construction_Status__c</fullName>
    <formula>TEXT(Opportunity__r.Construction_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Status</label>
    <type>Text</type>
</CustomField>