force-app/main/default/objects/SPA_Form__c/fields/Construction_Type__c.field-meta.xml
<CustomField>
    <fullName>Construction_Type__c</fullName>
    <formula>TEXT(Opportunity__r.Construction_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Construction Type</label>
    <type>Text</type>
</CustomField>