force-app/main/default/objects/SPA_Form__c/fields/Consumption_on_Hand_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Consumption_on_Hand_Inventory__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Consumption on Hand Inventory</label>
    <referenceTo>Consumption_on_Hand_Inventory__c</referenceTo>
    <relationshipLabel>SPA Forms</relationshipLabel>
    <relationshipName>SPA_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>