force-app/main/default/objects/SPA_Form__c/fields/Deal_IGM__c.field-meta.xml
<CustomField>
    <fullName>Deal_IGM__c</fullName>
    <label>Deal IGM%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>