force-app/main/default/objects/SPA_Form__c/fields/Deal_Margin__c.field-meta.xml
<CustomField>
    <fullName>Deal_Margin__c</fullName>
    <label>Deal Margin</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>