force-app/main/default/objects/SPA_Form__c/fields/Final_Approval_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval_Reason_Details__c</fullName>
    <label>Final Approval Reason Details</label>
    <type>TextArea</type>
</CustomField>