force-app/main/default/objects/SPA_Form__c/fields/Finances__c.field-meta.xml
<CustomField>
    <fullName>Finances__c</fullName>
    <label>Finances</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPA_Finances</valueSetName>
    </valueSet>
</CustomField>