force-app/main/default/objects/SPA_Form__c/fields/FullOrderCSO__c.field-meta.xml
<CustomField>
    <fullName>FullOrderCSO__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Field that when is checked will checks automatically the field Opps Review Completed by automation.</description>
    <label>Full Order CSO</label>
    <type>Checkbox</type>
</CustomField>