force-app/main/default/objects/SPA_Form__c/fields/Input_Voltage_Required__c.field-meta.xml
<CustomField>
    <fullName>Input_Voltage_Required__c</fullName>
    <label>Input Voltage Required</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Line_Voltage</valueSetName>
    </valueSet>
</CustomField>