force-app/main/default/objects/SPA_Form__c/fields/Inventory_Consumption__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Consumption__c</fullName>
    <label>Inventory Consumption</label>
    <length>255</length>
    <type>Text</type>
</CustomField>