force-app/main/default/objects/SPA_Form__c/fields/Inventory_Purchases_Required__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Purchases_Required__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Inventory Purchases Required</label>
    <referenceTo>Inventory_Purchases_Required__c</referenceTo>
    <relationshipLabel>SPA Forms</relationshipLabel>
    <relationshipName>SPA_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>