force-app/main/default/objects/SPA_Form__c/fields/Margin__c.field-meta.xml
<CustomField>
    <fullName>Margin__c</fullName>
    <label>Margin w/out fixed ZUPs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>