force-app/main/default/objects/SPA_Form__c/fields/Operations_Confirmed_Lead_Time__c.field-meta.xml
<CustomField>
    <fullName>Operations_Confirmed_Lead_Time__c</fullName>
    <label>Operations Confirmed Lead Time</label>
    <length>255</length>
    <type>Text</type>
</CustomField>