force-app/main/default/objects/SPA_Form__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Opportunity</relationshipLabel>
    <relationshipName>SPA_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>