force-app/main/default/objects/SPA_Form__c/fields/Opportunity_Approval_Status__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Approval_Status__c</fullName>
    <formula>TEXT(Opportunity__r.TECH_Approval_Status__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Approval Status</label>
    <type>Text</type>
</CustomField>