force-app/main/default/objects/SPA_Form__c/fields/Opportunity_Approval_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Approval_Status_Date__c</fullName>
    <formula>Opportunity__r.TECH_Approval_Status_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Approval Status Date</label>
    <type>Date</type>
</CustomField>