force-app/main/default/objects/SPA_Form__c/fields/Opps_Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Opps_Review_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Opps Review Completed</label>
    <type>Checkbox</type>
</CustomField>