force-app/main/default/objects/SPA_Form__c/fields/Other_Input_Voltage__c.field-meta.xml
<CustomField>
    <fullName>Other_Input_Voltage__c</fullName>
    <label>Other Input Voltage</label>
    <length>255</length>
    <type>Text</type>
</CustomField>