force-app/main/default/objects/SPA_Form__c/fields/Parents_or_Subsidiaries__c.field-meta.xml
<CustomField>
    <fullName>Parents_or_Subsidiaries__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parents or Subsidiaries</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SPA Forms</relationshipLabel>
    <relationshipName>SPA_Parent_Subsidiaries_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>