force-app/main/default/objects/SPA_Form__c/fields/Payment_Terms__c.field-meta.xml
<CustomField>
    <fullName>Payment_Terms__c</fullName>
    <formula>TEXT(Opportunity__r.Account.Payment_Terms__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Terms</label>
    <type>Text</type>
</CustomField>