force-app/main/default/objects/SPA_Form__c/fields/Pre_Approval_Reason_Details__c.field-meta.xml
<CustomField>
    <fullName>Pre_Approval_Reason_Details__c</fullName>
    <label>Pre-Approval Reason Details</label>
    <type>TextArea</type>
</CustomField>