force-app/main/default/objects/SPA_Form__c/fields/Product_Specifications__c.field-meta.xml
<CustomField>
    <fullName>Product_Specifications__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product Specifications</label>
    <referenceTo>Product_Specifications__c</referenceTo>
    <relationshipLabel>SPA Forms</relationshipLabel>
    <relationshipName>SPA_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>