force-app/main/default/objects/SPA_Form__c/fields/Project_State__c.field-meta.xml
<CustomField>
    <fullName>Project_State__c</fullName>
    <label>Project State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>State_Picklists</valueSetName>
    </valueSet>
</CustomField>