force-app/main/default/objects/SPA_Form__c/fields/Quality_Hold__c.field-meta.xml
<CustomField>
    <fullName>Quality_Hold__c</fullName>
    <label>Quality Hold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>