force-app/main/default/objects/SPA_Form__c/fields/Shipment_Tranches_and_Timing__c.field-meta.xml
<CustomField>
    <fullName>Shipment_Tranches_and_Timing__c</fullName>
    <label>Shipment Tranches and Timing</label>
    <length>255</length>
    <type>Text</type>
</CustomField>