force-app/main/default/objects/SPA_Form__c/fields/Spa_Finance_Section_Reviswed__c.field-meta.xml
<CustomField>
    <fullName>Spa_Finance_Section_Reviswed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Finance Review Completed</label>
    <type>Checkbox</type>
</CustomField>