force-app/main/default/objects/SPA_Form__c/fields/Special_Pricing_Request_Reason__c.field-meta.xml
<CustomField>
    <fullName>Special_Pricing_Request_Reason__c</fullName>
    <label>Special Pricing Request Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>