force-app/main/default/objects/SPA_Form__c/fields/Stage__c.field-meta.xml
<CustomField>
    <fullName>Stage__c</fullName>
    <label>Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pre-Approval</fullName>
                <default>true</default>
                <label>Pre-Approval</label>
            </value>
            <value>
                <fullName>Final Approval</fullName>
            </value>
            <value>
                <fullName>In Progress</fullName>
                <isActive>false</isActive>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>New</fullName>
                <isActive>false</isActive>
                <label>New</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>