force-app/main/default/objects/SPA_Form__c/fields/Total_Cultivation_Area__c.field-meta.xml
<CustomField>
    <fullName>Total_Cultivation_Area__c</fullName>
    <label>Total Cultivation Area</label>
    <precision>11</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>