force-app/main/default/objects/SPA_Form__c/fields/Total_Cultivation_Unit_of_Measure__c.field-meta.xml
<CustomField>
    <fullName>Total_Cultivation_Unit_of_Measure__c</fullName>
    <label>Total Cultivation Unit of Measure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPA_Total_Cultivation_Unit_of_Measure</valueSetName>
    </valueSet>
</CustomField>