force-app/main/default/objects/SPA_Form__c/fields/Total_Spend_Last_24_Months__c.field-meta.xml
<CustomField>
    <fullName>Total_Spend_Last_24_Months__c</fullName>
    <label>Total Spend (Last 24 Months)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>SPA_Total_Amount_Spend</valueSetName>
    </valueSet>
</CustomField>