force-app/main/default/objects/SPA_Form__c/recordTypes/Sample_Trial_Request.recordType-meta.xml
<RecordType>
    <fullName>Sample_Trial_Request</fullName>
    <active>true</active>
    <label>Sample/Trial Request</label>
</RecordType>