force-app/main/default/objects/SPA_Form__c/recordTypes/SPA_with_Visibility.recordType-meta.xml
<RecordType>
    <fullName>SPA_with_Visibility</fullName>
    <active>true</active>
    <label>SPA with Visibility</label>
</RecordType>