force-app/main/default/objects/SPA_Form__c/recordTypes/SPA_without_Visibility.recordType-meta.xml
<RecordType>
    <fullName>SPA_without_Visibility</fullName>
    <active>true</active>
    <label>SPA without Visibility</label>
</RecordType>