force-app/main/default/objects/SPA_Form__c/validationRules/Prevent_OthersUsers_ChangeSPAToApproved.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_OthersUsers_ChangeSPAToApproved</fullName>
    <active>false</active>
    <description>Prevent Unauthorized Users to update the SPA Form&apos;s Status in Final Approval Stage.</description>
    <errorConditionFormula>AND(
    NOT(ByPassValidationRules__c),
    NOT($Setup.Bypass_Configuration__c.SPA_Form_Validation_Rule__c), 				   
				OR(
							ISPICKVAL(Status__c,&quot;Approved&quot;),
							ISPICKVAL(Status__c,&quot;Denied&quot;)
				   ),
				ISCHANGED(Status__c),
				ISPICKVAL(Stage__c,&quot;Final Approval&quot;)
)</errorConditionFormula>
    <errorMessage>You are not allowed change the status to Approved. Please, contact System Administrator .</errorMessage>
</ValidationRule>