force-app/main/default/objects/SPA_Form__c/validationRules/Prevent_SPA_FinalApp_Without_Reason_Deta.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_SPA_FinalApp_Without_Reason_Deta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Status__c,&quot;Approved&quot;),ISPICKVAL(Status__c,&quot;Denied&quot;)),ISPICKVAL(Stage__c,&quot;Final Approval&quot;),ISBLANK(Final_Approval_Reason_Details__c))</errorConditionFormula>
    <errorDisplayField>Final_Approval_Reason_Details__c</errorDisplayField>
    <errorMessage>Final Approval Reason Details should be filled before change SPA Form status to Approved or Denied.</errorMessage>
</ValidationRule>