force-app/main/default/objects/SPA_Form__c/validationRules/Prevent_SPA_FinanceRev_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_SPA_FinanceRev_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED( Spa_Finance_Section_Reviswed__c ),NOT($Setup.Bypass_Configuration__c.SPA_Form_Validation_Rule__c))</errorConditionFormula>
    <errorDisplayField>Spa_Finance_Section_Reviswed__c</errorDisplayField>
    <errorMessage>You are not allowed to change &quot;Finance Section Review&quot; field. Please reach out to System Administrator for additional help.</errorMessage>
</ValidationRule>