force-app/main/default/objects/SPA_Form__c/validationRules/Prevent_SPA_OppsRev_Update.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_SPA_OppsRev_Update</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
				ISCHANGED(Opps_Review_Completed__c), 
				($Profile.Name &lt;&gt; &apos;System Administrator&apos;),
				NOT($Permission.SPAOpsReviewCompleteEdit),
  		NOT(ByPassValidationRules__c) 
)</errorConditionFormula>
    <errorDisplayField>Opps_Review_Completed__c</errorDisplayField>
    <errorMessage>You are not allowed to change &quot;Opps Review Completed&quot; field. Please reach out to System Administrator for additional help.</errorMessage>
</ValidationRule>