force-app/main/default/objects/SPA_Form__c/validationRules/Prevent_SPA_PreApp_Without_Reason_Deta.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_SPA_PreApp_Without_Reason_Deta</fullName>
    <active>true</active>
    <errorConditionFormula>AND(ISCHANGED(Status__c),OR(ISPICKVAL(Status__c,&quot;Approved&quot;),ISPICKVAL(Status__c,&quot;Denied&quot;)),ISPICKVAL(Stage__c,&quot;Pre-Approval&quot;),ISBLANK(Pre_Approval_Reason_Details__c))</errorConditionFormula>
    <errorDisplayField>Pre_Approval_Reason_Details__c</errorDisplayField>
    <errorMessage>Pre-Approval Reason Details should be filled before change SPA Form status to Approved or Denied.</errorMessage>
</ValidationRule>