force-app/main/default/objects/SPA_Form__c/validationRules/Prevent_users_modify_approved_denied_spa.validationRule-meta.xml
<ValidationRule>
    <fullName>Prevent_users_modify_approved_denied_spa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
NOT(PRIORVALUE(ByPassValidationRules__c)),
NOT($Setup.Bypass_Configuration__c.SPA_Form_Validation_Rule__c),
NOT(ISNEW()),
ISPICKVAL(PRIORVALUE(Stage__c),&quot;Final Approval&quot;),
OR(
ISPICKVAL(PRIORVALUE(Status__c),&quot;Approved&quot;),
ISPICKVAL(PRIORVALUE(Status__c),&quot;Denied&quot;)
)
)</errorConditionFormula>
    <errorMessage>Changes to Approved or Denied SPA Form is not allowed. Please reach out to System Administrator for additional help.</errorMessage>
</ValidationRule>