force-app/main/default/objects/SPA_Form__c/validationRules/PreventSPAStatusChangedDuringCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>PreventSPAStatusChangedDuringCreation</fullName>
    <active>true</active>
    <description>This rule prevent end users to create SPA Form records with Status not equals to Submitted.</description>
    <errorConditionFormula>AND(
				ISNEW(),
				NOT(ISPICKVAL(Status__c, &apos;Submitted&apos;)) 
				)</errorConditionFormula>
    <errorDisplayField>Status__c</errorDisplayField>
    <errorMessage>You cannot change the status during the creation of a SPA form.</errorMessage>
</ValidationRule>